--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 <div style="text-align:center">
     <h2>All manim Mobjects</h2>
     <p>Click on the images below to copy the code snippet:</p>
-    <p>https://github.com/kolibril13/mobject-gallery</p>
+    <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
+
 </div>
 
 <!-- The four columns -->
