--- a/debugging_page.html
+++ b/debugging_page.html
@@ -48,11 +48,11 @@
 
 
 <div class="grid">
-    <div><img src="basics01_dot.png"> </div>
-    <div><img src="basics02_circle.png"> </div>
-    <div><img src="basics03_square.png"> </div>
-    <div><img src="basics04_line.png"> </div>
-    <div><img src="basics05_star.png"> </div>
+    <div><img src="image001basics_circle.png"> </div>
+    <div><img src="image002basics_ellipse.png"> </div>
+    <div><img src="image003basics_square.png"> </div>
+    <div><img src="image004basics_line.png"> </div>
+    <div><img src="image005basics_star.png"> </div>
 </div>
 
 
