more amazing shapes

--- a/debugging_page.html
+++ b/debugging_page.html
@@ -47,13 +47,13 @@
 <p id="info_field"> Here will come the text that you copied.</p>
 
 
-<div class="grid">
-    <div><img src="image001basics_circle.png"> </div>
-    <div><img src="image002basics_ellipse.png"> </div>
-    <div><img src="image003basics_square.png"> </div>
-    <div><img src="image004basics_line.png"> </div>
-    <div><img src="image005basics_star.png"> </div>
-</div>
+<!--//<div class="grid">-->
+<!--//    <div><img src="image001basics_circle.png"> </div>-->
+<!--//    <div><img src="image002basics_ellipse.png"> </div>-->
+<!--//    <div><img src="image003basics_square.png"> </div>-->
+<!--//    <div><img src="image004basics_line.png"> </div>-->
+<!--//    <div><img src="image005basics_star.png"> </div>-->
+<!--//</div>-->
 
 
 <script>
