added another chapter

--- a/index.html
+++ b/index.html
@@ -43,14 +43,23 @@
     request.open("GET", "name_snippet_pairs.json", false);
     request.send(null);
     var jsonData = JSON.parse(request.responseText);
-
-
-
-
     document.writeln(' <h1>Basic Shapes</h1>')
     for (let key of Object.keys(jsonData)) {
         document.write(`<img src='images/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
     }
+    var request = new XMLHttpRequest();
+    request.open("GET", "name_snippet_pairs_text.json", false);
+    request.send(null);
+    var jsonData = JSON.parse(request.responseText);
+    document.writeln(' <h1>Text</h1>')
+    for (let key of Object.keys(jsonData)) {
+        document.write(`<img src='images/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
+    }
+
+
+
+
+
     // add copy button to images
     function myFunction(imgs) {
         var name = imgs.alt;
