--- a/w4.html
+++ b/w4.html
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-
-<h2>Creating an Object from a JSON String</h2>
-
-<p id="demo"></p>
-
-
-<script type="text/javascript" src="name_snippet_pairs.json"></script>
-
-
-<script>
-    const txt = '{"name":"John", "age":30, "city":"New York"}'
-    const obj = JSON.parse(txt);
-</script>
-
-
-
-
-</body>
-</html>
-
+<head>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+</head>
+<pre><code class="python">def fib(n):
+  a, b = 0, 1
+    while a < n:
+      print(a, end=' ')
+      a, b = b, a+b
+      print()
+  fib(1000)</code></pre>
