--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <h2>All manim Mobjects</h2>
     <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
     <p><a href="debugging_page.html">Debugging Page</a></p>
+    <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines"</p>
+
     <p>Click on the images below to copy the code snippet:</p>
 
 </div>
@@ -59,22 +61,21 @@ class Example(Scene):
 
 <script>
     var request = new XMLHttpRequest();
-    request.open("GET", "Mobjects_Basics.json", false);
+    request.open("GET", "_static/Mobjects_Basics.json", false);
     request.send(null);
     var jsonData = JSON.parse(request.responseText);
     document.writeln(' <h1>Basic Shapes</h1>')
     for (let key of Object.keys(jsonData)) {
-        document.write(`<img src='images/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
+        document.write(`<img src='_static/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
     }
     var request = new XMLHttpRequest();
-    request.open("GET", "Mobjects_Text.json", false);
+    request.open("GET", "_static/Mobjects_Text.json", false);
     request.send(null);
     var jsonData = JSON.parse(request.responseText);
     document.writeln(' <h1>Text</h1>')
     for (let key of Object.keys(jsonData)) {
-        document.write(`<img src='images/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
+        document.write(`<img src='_static/${key}' alt= '${jsonData[key]}' onclick='myFunction(this);' class='image'> `);
     }
-
 
 
 
