removed debugging_page.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .div1 {
         width: 600px;
         height: 150px;
-        border: 0px solid blue;
+        border: 0;
     }
     .image {
         opacity: 1;
@@ -41,7 +41,6 @@
 <div style="text-align:center">
     <h2>All manim Mobjects</h2>
     <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
-    <p><a href="debugging_page.html">Debugging Page</a></p>
     <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines"</p>
 
     <p>Click on the images below to copy the code snippet:</p>
