--- a/index.html
+++ b/index.html
@@ -3,54 +3,52 @@
 
 
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
     <style>
-    .div1 {
-        width: 600px;
-        height: 150px;
-        border: 0;
-    }
-    .image {
-        opacity: 1;
-        display: inline-block;
-        border: 2px solid darkcyan;
-        width: 80px;
-        height: auto;
-        margin: 1px;
-        transition: .1s ease;
-        backface-visibility: hidden;
-        border-radius: 8px;
-    }
-    .image:hover {
-        opacity: 0.4;
-    }
+        .div1 {
+            width: 600px;
+            height: 150px;
+            border: 0;
+            font-size: 10px;
+        }
+        .image {
+            opacity: 1;
+            display: inline-block;
+            border: 2px solid darkcyan;
+            width: 80px;
+            height: auto;
+            margin: 1px;
+            transition: .1s ease;
+            backface-visibility: hidden;
+            border-radius: 8px;
+        }
+        .image:hover {
+            opacity: 0.4;
+        }
 
 
-</style>
+    </style>
     <title>Hello Manim</title>
 
 </head>
 
 <body>
 
-<div style="text-align:center">
-    <h2>All manim Mobjects</h2>
-    <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
+<div>
     <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines"</p>
-
     <p>Click on the images below to copy the code snippet:</p>
 
 </div>
 <div class="div1">
 
-<br>
+    <br>
 
-<pre><code class="python"><p id="info_field"><b>Here will come the text that you copied.</b>
+    <pre><code class="python"><p id="info_field"><b>Here will come the text that you copied.</b>
 class Example(Scene):
     def construct(self):
         self.add(Dot(color=YELLOW)) </p>
