--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 <body>
 
-<div>
+<div style="text-align:center">
+    <h2>All manim Mobjects</h2>
+    <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
     <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines"</p>
     <p>Click on the images below to copy the code snippet:</p>
 
