--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
     <style>
+        h1 {color: blue; margin-bottom:0px;   margin-top:0px}
+
         .div1 {
             width: 600px;
             height: 150px;
