--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
     <style>
-        h1 {color: blue; margin-bottom:0px;   margin-top:0px}
+        h1 {margin-bottom:0px;   margin-top:0px}
+        h2 {margin-bottom:0px;   margin-top:0px}
+        p {margin-bottom:0px;   margin-top:0px}
 
         .div1 {
             width: 600px;
