--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             opacity: 1;
             display: inline-block;
             border: 2px solid darkcyan;
-            width: 200px;
+            width: 170px;
             height: auto;
             margin: 1px;
             transition: .1s ease;
@@ -43,6 +43,9 @@
             border-radius: 8px;
         }
         .image:hover {
+            opacity: 0.4;
+        }
+        .imagebig:hover {
             opacity: 0.4;
         }
 
