--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
     <style>
-        h1 {margin-bottom:0px;   margin-top:0px}
-        h2 {margin-bottom:0px;   margin-top:0px}
-        p {margin-bottom:0px;   margin-top:0px}
+        h1 {margin-bottom:0;   margin-top:0}
+        h2 {margin-bottom:0;   margin-top:0}
+        p {margin-bottom:0;   margin-top:0}
 
         .div1 {
             width: 600px;
@@ -69,10 +69,10 @@
 
     <br>
 
-    <pre><code class="python"><p id="info_field"><b>Here will come the text that you copied.</b>
+    <pre><code class="python" id="info_field"><b>Here will come the text that you copied.</b>
 class Example(Scene):
     def construct(self):
-        self.add(Dot(color=YELLOW)) </p>
+        self.add(Dot(color=YELLOW))
 </code></pre>
 </div>
 
