--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 <body style="background-color:#ece6e2;">
 
 <div style="text-align:center">
-    <h2>All manim Mobjects</h2>
+    <h2>Mobject Gallery</h2>
     <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
-    <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines"</p>
-    <p>Click on the images below to copy the code snippet:</p>
+    <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines".</p>
+    <p>Click on the images below to copy the code snippet.</p>
 
 </div>
 <div class="div1">
