--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
     <p>Hint: In PyCharm, activate the setting "Smart indent pasted lines".</p>
     <p>Click on the images below to copy the code snippet. </p>
+    <a href='https://ko-fi.com/A0A769TH3' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
 
 </div>
 <div class="div1">
