matrix elements + version number

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         h1 {margin-bottom:0;   margin-top:0}
         h2 {margin-bottom:0;   margin-top:0}
         p {margin-bottom:0;   margin-top:0}
+        .box {
+            position:absolute;
+            top:10px;
+            right:10px;
+        }
 
         .div1 {
             width: 600px;
@@ -76,7 +81,9 @@ class Example(Scene):
         self.add(Dot(color=YELLOW))
 </code></pre>
 </div>
-
+<div class="box">
+    <p>Manim v0.10.0</p>
+</div>
 
 <script>
     var request1 = new XMLHttpRequest();
