--- a/compare.html
+++ b/compare.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<div class="box"><iframe src="https://flyingframes--18.org.readthedocs.build/en/18/opengl.html" frameborder="0" scrolling="no" width="170%" height="2000" align="left"> </iframe> </div>
+<div class="box"><iframe src="https://flyingframes--18.org.readthedocs.build/en/18/withcairo.html" frameborder="0" scrolling="no" width="170%" height="10000" align="left"> </iframe> </div>
 
-<div class="box">    <iframe src="https://flyingframes--18.org.readthedocs.build/en/18/withcairo.html" frameborder="0" scrolling="no" width="170%" height="2000" align="right">
+<div class="box">    <iframe src="https://flyingframes--18.org.readthedocs.build/en/18/opengl.html" frameborder="0" scrolling="no" width="170%" height="10000" align="right">
     </iframe>
 </div>
 <div class="clear"></div>
