--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         .gallery_entry {
             opacity: 1;
             display: inline-block;
+            border: 2px solid darkcyan;
             width: 80px;
             height: auto;
             margin: 1px;
@@ -133,22 +134,19 @@
             opacity: 0.7;
         }
     </style>
-    <title>Python Example Gallery</title>
+    <title>Mobject Gallery</title>
 </head>
 
 <body style="background-color:#ece6e2;">
     <div style="text-align:center">
-        <h2>Array Gallery</h2> Repo: <a
-            href="https://github.com/kolibril13/plywood">https://github.com/kolibril13/plywood</a>
+        <h2>Mobject Gallery</h2>
+        <a href="https://github.com/kolibril13/mobject-gallery">https://github.com/kolibril13/mobject-gallery</a>
+
     </div>
     <div> <small>
             <br>
             <b> Info: </b>
-            Normal cells are independend of each other, and can be run
-            togehter with the import cell. <br>
-            A "Dependend" cell depends on the "Normal" cell left to it.<br>
-            A "Dependend" cell depends on another "Dependend" cell left to
-            it.<br>
+            Click on the images below to copy the code snippet.<br>
         </small> </div>
 
 
@@ -178,7 +176,7 @@
             <br>
             <li><span class="label2"></span> Normal</li>
             <br>
-            <li><span class="label3"></span> Dependend</li>
+            <li><span class="label3"></span> PLACEHOLDER</li>
             <br>
         </ul>
     </div>
