--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         .gallery_entry {
             opacity: 1;
             display: inline-block;
-            border: 2px solid darkcyan;
+            border: 2px solid #008DD5;
             width: 80px;
             height: auto;
             margin: 1px;
@@ -146,7 +146,7 @@
     <div> <small>
             <br>
             <b> Info: </b>
-            Click on the images below to copy the code snippet.<br>
+            Click on the images below to show thir code snippets.<br>
         </small> </div>
 
 
