better json structure

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
     <script src="init_images_and_text.js"></script>
     <div class="box2">
         <ul class="legend">
-            <li><span class="label1"></span> Header</li>
+            <li><span class="label1"></span> </li> <!--  Header -->
             <br>
-            <li><span class="label2"></span> Normal</li>
+            <li><span class="label2"></span> </li>  <!--  Normal -->
             <br>
-            <li><span class="label3"></span> PLACEHOLDER</li>
-            <br>
+            <li><span class="label3"></span> </li> <!--  Dependend -->
+            <br> 
         </ul>
     </div>
 </body>
