--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="box">
         <p id="version_number"></p>
     </div>
-    <script src="init_images_and_text.js"></script>
+    <script src="index.js"></script>
     <div class="box2">
         <ul class="legend">
             <li><span class="label1"></span> </li> <!--  Header -->
